source/objects/Bluescape_Org__c/Bluescape_Org__c.object-meta.xml
<CustomObject>
    <description>Bluescape Portal Organization</description>
    <label>Bluescape Org</label>
    <nameField>
        <label>Bluescape Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bluescape Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>