source/objects/Bluescape_Org__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bluescape Orgs</relationshipLabel>
    <relationshipName>Bluescape_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>