source/objects/Bluescape_Org__c/fields/Bluescape_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Bluescape_Org_ID__c</fullName>
    <externalId>true</externalId>
    <label>Bluescape Org ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>