source/objects/Bluescape_Org__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Org Plan Type</description>
    <label>Plan</label>
    <length>40</length>
    <type>Text</type>
</CustomField>