source/objects/Bluescape_Org__c/fields/Portal_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Portal_Created_Date__c</fullName>
    <description>Date when the Bluescape Org was created on the Portal</description>
    <inlineHelpText>Date when the Bluescape Org was created on the Portal</inlineHelpText>
    <label>Portal Created Date</label>
    <type>DateTime</type>
</CustomField>